--- a/src/app/pages/draw-anatomye/draw-anatomye.page.scss
+++ b/src/app/pages/draw-anatomye/draw-anatomye.page.scss
@@ -46,3 +46,12 @@
     font-size: 12px;
     color: gray;
 }
+.title{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 50%;
+    font-size:17px;
+    color: gray;
+    
+}
