--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -92,3 +92,13 @@ ion-content {
         flex-grow: 1;
         margin: 0px 10px;
     }
+
+#alertsFalse{
+
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 50%;
+    font-size:17px;
+    color: gray;
+}    
