--- a/src/app/pages/tipousuario/tipousuario.page.html
+++ b/src/app/pages/tipousuario/tipousuario.page.html
@@ -3,19 +3,32 @@
   </ion-header>
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
     <ion-title>
-      <h5 id="titulo">Tipo de Usuario</h5>
+      <label id="titulo">Selecciona el tipo de usuario</label>
     </ion-title>
   </ion-item>
 <ion-grid id="espacio">
 </ion-grid>
-
   <ion-grid id="botones">
+    <ion-grid>
+      <div>
+        <ion-avatar style="margin: auto;">
+          <img src="assets/imagenes/medico.jpg"/>
+        </ion-avatar>
+      </div>
+    </ion-grid>
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Profesional de la Salud</label>
       </ion-item>
     </ion-card>
+    <ion-grid>
+      <div>
+        <ion-avatar style="margin: auto;">
+          <img src="assets/imagenes/paciente.jpg"/>
+        </ion-avatar>
+      </div>
+    </ion-grid>
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;"  id="dos">
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
