--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,13 @@
-<img  id="img" src="../../../assets/img/logo1.png" alt="">
+<ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-back-button defaultHref='/' style="color:black"></ion-back-button>
+ </ion-buttons>
+</ion-toolbar>
+  <div style="width: 100%; height:23vh">
+    <ion-avatar style="margin: auto;">
+      <img src="assets/imagenes/paciente.png"/>
+    </ion-avatar>
+  </div>
 <ion-content>
   <div>
     <ion-tabs id="tabs">
@@ -12,4 +21,4 @@
       </ion-tab-bar>
     </ion-tabs>
     </div>
-</ion-content>
+</ion-content>  
