--- a/src/app/pages/tipousuario/tipousuario.page.html
+++ b/src/app/pages/tipousuario/tipousuario.page.html
@@ -2,17 +2,18 @@
   <ion-header collapse="condense">
   </ion-header>
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
-    <ion-title>
-      <label id="titulo">Selecciona el tipo de usuario</label>
+    <ion-title id="titulo">
+      <ion-label >Qué tipo de usuario eres?</ion-label>
     </ion-title>
   </ion-item>
 <ion-grid id="espacio">
 </ion-grid>
+
   <ion-grid id="botones">
     <ion-grid>
       <div>
         <ion-avatar style="margin: auto;">
-          <img src="assets/imagenes/medico.jpg"/>
+          <img src="assets/imagenes/medico.png" style="background-color:white;"/>
         </ion-avatar>
       </div>
     </ion-grid>
@@ -25,7 +26,7 @@
     <ion-grid>
       <div>
         <ion-avatar style="margin: auto;">
-          <img src="assets/imagenes/paciente.jpg"/>
+          <img src="assets/imagenes/paciente.png" style="background-color:white;"/>
         </ion-avatar>
       </div>
     </ion-grid>
