--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,16 +1,17 @@
 <ion-toolbar>
   <ion-buttons slot="start">
-    <ion-back-button defaultHref='/' style="color:black"></ion-back-button>
+    <ion-back-button defaultHref='/tipousuario' style="color:black" text=""></ion-back-button>
  </ion-buttons>
 </ion-toolbar>
-  <div style="width: 100%; height:23vh">
+  <div style="width: 100%; height:26vh">
+    <p></p>
     <ion-avatar style="margin: auto;">
       <img src="assets/imagenes/paciente.png"/>
     </ion-avatar>
   </div>
 <ion-content>
   <div>
-    <ion-tabs id="tabs">
+    <ion-tabs id="tabs" no-lines>
       <ion-tab-bar slot="top" >
         <ion-tab-button class="tabs-one" tab="log-one">
           <p>Inicio</p>
