--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,22 +1,21 @@
 <ion-header>
-
 </ion-header>
 <ion-content>
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="grid-sharp"></ion-icon>
+      <img src="assets/imagenes/inicio.png">
     </ion-tab-button>
     <ion-tab-button tab="reportes">
-      <ion-icon name="stats-chart-sharp"></ion-icon>
+      <img src="assets/imagenes/reportes.png">
     </ion-tab-button>
 
     <ion-tab-button tab="notifications">
-      <ion-icon name="notifications-sharp"></ion-icon>
+      <img src="assets/imagenes/notificaciones.png">
     </ion-tab-button>
 
     <ion-tab-button tab="settings">
-      <ion-icon name="settings-sharp"></ion-icon>
+      <img src="assets/imagenes/config.png">
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
