--- a/src/app/pages/log-two/log-two.page.scss
+++ b/src/app/pages/log-two/log-two.page.scss
@@ -1,21 +1,22 @@
-.content{
-    --background-color: white;
-}
+ion-content{
+    --background:#F5F5F8;
+    }
 
 #forms{
     margin-bottom: 10%;
     padding:30px;
 }
 #buttonI{
-  margin-top: auto ;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  margin-bottom: 5%;
+    width:50%;
+    height: 58px;
+    margin-left:25%;
+    margin-right:25%;
+  
 }
 .items{
     margin-top: 5%;
+    --background:#F5F5F8;
+    border-radius: 30px;
 }
 
 .label{
