--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -12,6 +12,7 @@ ion-content {
     background: #FFFFFF;
     margin-bottom: 5px;
     border: 20px solid #FFFFFF;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 } 
   ion-card-title{
     margin-top: 30px;
@@ -76,4 +77,20 @@ ion-tab-bar{
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
+}
+ion-tab-button {
+  --color: var(--ion-color-medium);
+  --color-selected: var(--ion-color-primary);
+
+  &::before {
+    background-color: transparent;
+    display: block;
+    content: "";
+    margin: 0 auto;
+    width: 100px;
+    height: 2px;
+  }
+  &.tab-selected::before {
+    background-color: var(--ion-color-primary);
+  }
 }
