--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,6 +1,12 @@
 ion-content {
     --background:#F5F5F8;
 }
+ion-thumbnail{
+    width: 69px;
+    height: 69px;
+    left: 24px; 
+    top: 4px;
+}
 #titulo{
     position: static;
     width: 277px;
@@ -60,4 +66,8 @@ ion-card:hover, #uno:hover, #dos:hover, #tres:hover, #cuatro:hover, #cinco:hover
  }
 ion-card-content{
     background:white;
+}
+ion-grid{
+    margin-top: -15px;
+    margin-bottom: -10px;
 }
