--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,15 +1,29 @@
 ion-content {
     --background:#F5F5F8;
 }
-ion-tab-bar, ion-tab-button{
-    background-color:white;
-    border: 0 !important;
-    box-shadow: none !important;
-    border: none !important;
-    border-style: none !important;
-    height: 45px;
-    left: 0px;
-    right: 0px;
-    top: 806px;
-    box-shadow: 0px -1px 4px
-   }
+
+ion-tab-bar {
+    bottom: 20px;
+    position: relative;
+    border-radius: 16px;
+    width: 92%;
+    margin: 0 auto;
+    box-shadow: 1px -1px 0px rgba(0, 0, 0, 0.08);
+  }
+  ion-tab-button {
+    --color: var(--ion-color-medium);
+    --color-selected: var(--ion-color-primary);
+  
+    &::before {
+      background-color: transparent;
+      display: block;
+      content: "";
+      margin: 0 auto;
+      width: 20px;
+      height: 2px;
+    }
+  
+    &.tab-selected::before {
+      background-color: var(--ion-color-primary);
+    }
+  }
