--- a/src/app/pages/log-two/log-two.page.html
+++ b/src/app/pages/log-two/log-two.page.html
@@ -52,7 +52,7 @@
       <ion-label class="label" position="floating">Fecha de nacimiento</ion-label>
       <ion-input name="date_of_birth" [(ngModel)]="registro.date_of_birth" ></ion-input>
     </ion-item>
-    <!-- hagamos un desplegable con algunos studios-->
+    <!-- hagamos un desplegable con algunos estudios-->
     <ion-item class="items">
       <ion-label class="label" position="stacked">Nivel de estudios</ion-label>
       <ion-input name="level_school" [(ngModel)]="registro.level_school" ></ion-input>
