--- a/src/app/pages/log-one/log-one.page.html
+++ b/src/app/pages/log-one/log-one.page.html
@@ -3,7 +3,7 @@
   </ion-header>
   <div id ="forms">
     <ion-item class="items">
-      <ion-label  placeholder="email" class="label" position="stacked">Correo electrónico o número de identificación</ion-label>
+      <ion-label  placeholder="email" class="label" position="stacked">Correo electrónico</ion-label>
       <ion-input  [(ngModel)]="registro.email"></ion-input>
     </ion-item>
     <ion-item class="items">
@@ -17,5 +17,6 @@
   <ion-grid style="margin-top: 42px;">
   <ion-button (click)=" LoginUp()" id="buttonI">Iniciar Sesión</ion-button>
   </ion-grid>
+
 </ion-content>
 
