--- a/src/app/pages/tipousuario/tipousuario.page.html
+++ b/src/app/pages/tipousuario/tipousuario.page.html
@@ -3,7 +3,7 @@
   </ion-header>
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
     <ion-title id="titulo">
-      <ion-label >¿Qué tipo de usuario eres?</ion-label>
+      <ion-label >¿Cómo quieres entrar?</ion-label>
     </ion-title>
   </ion-item>
 <ion-grid id="espacio">
