--- a/src/app/pages/descargarproceso/descargarproceso.page.html
+++ b/src/app/pages/descargarproceso/descargarproceso.page.html
@@ -1,6 +1,6 @@
 <ion-toolbar>
   <ion-buttons slot="start">
-    <ion-back-button defaultHref='/tab1' style="color:black" text=""></ion-back-button>
+    <ion-back-button defaultHref="/reportes" style="color:black" text=""></ion-back-button>
  </ion-buttons>
 </ion-toolbar>
 <ion-content [fullscreen]="true">
