--- a/src/app/pages/log-two/log-two.page.html
+++ b/src/app/pages/log-two/log-two.page.html
@@ -81,15 +81,22 @@
         <ion-select-option value="No">No</ion-select-option>
       </ion-select>
     </ion-item>
+    <!--
+    <ion-item class="items" lines="none">
+      <ion-label style="color: black; font-size: 12px; text-align:justify;">Autorizo a mi familiar para consultar y/o registrar información, así como permitir el ingreso y uso de la aplicación.</ion-label>
+      <ion-checkbox mode="md">
+      </ion-checkbox>
+    </ion-item>
+    -->
     <ion-item class="items" lines="none">
       <ion-label style="color: black; font-size: 12px; text-align:justify;">Acepto las <a href='https://drive.google.com/file/d/1zWNyWbUF2gu01BXIXvmvWiizhc4y9rmX/view?usp=sharing'>Políticas de privacidad y<br>Tratamiento de datos</a></ion-label>
-      <ion-checkbox mode="md">
+      <ion-checkbox mode="md" [checked]="isToggled" (ionChange)="notify()">
       </ion-checkbox>
     </ion-item>
   </div>
 
   <ion-grid style="margin-top: -40px;">
-  <ion-button (click)="addUser()" id="buttonI">Registrarse</ion-button>
+  <ion-button (click)="addUser()" id="buttonI" [disabled]="!isToggled">Registrarse</ion-button>
 </ion-grid>
 </ion-content>
  
